--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "firebase": "^7.19.1",
     "markdown-it": "^11.0.0",
     "moment": "^2.27.0",
     "next": "9.5.2",
