--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "firebase": "^7.19.1",
     "markdown-it": "^11.0.0",
     "moment": "^2.27.0",
     "next": "9.5.2",
     "nprogress": "^0.2.0",
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-countdown": "^2.2.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.2",
+    "reactstrap": "^8.5.1",
     "sweetalert": "^2.1.2"
   }
 }
